--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.0.14",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "uuid": "^8.3.2",
     "validate": "^5.1.0"
   },
   "description": ""
